--- a/cartoon/111.html
+++ b/cartoon/111.html
@@ -8,8 +8,8 @@
     <meta http-equiv="expires" content="-1">
     <meta name="format-detection" content="telephone=no">
     <title>アイドルマスター シンデレラガールズ</title>
-    <link rel="stylesheet" type="text/css" href="../../../css/rich/new_mypage_common.css" media="all">
-    <link rel="apple-touch-icon-precomposed" href="../../../image_sp/ui/icon_bookmark.png">
+    <link rel="stylesheet" type="text/css" href="../css/rich/new_mypage_common.css" media="all">
+    <link rel="apple-touch-icon-precomposed" href="../image_sp/ui/icon_bookmark.png">
     <script>
         (function() {
             window.console.log = function() {};
@@ -35,11 +35,11 @@
             document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
         }
     </script>
-    <script src="../../../js/jquery-2.2.2.min.js"></script>
+    <script src="../js/jquery-2.2.2.min.js"></script>
     <script>
         (function() {
             window.viewer_id = 134800333;
-            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error%3Fl_frm%3DCartoon_scene_1%26rnd%3D632774855";
+            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error";
             var _path = location.href;
             var _spec_obj;
             var _spec = 'none';
@@ -64,48 +64,35 @@
             }
         })();
     </script>
-    <script src="../../../js/underscore-min.js"></script>
-    <script src="../../../js/require.js"></script>
-    <script src="../../../js/require.js"></script>
+    <script src="../js/underscore-min.js"></script>
+    <script src="../js/require.js"></script>
+    <script src="../js/require.js"></script>
     <script>
         requirejs.config({
             paths: {
-                easeljs: "../../../js/easeljs-0.8.2.min.js",
-                easeljs_0_7_1: "../../../js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
-                tweenjs: "../../../js/tweenjs-0.6.2.min.js",
-                movieclipjs: "../../../js/movieclip-0.7.1.min.js",
-                createjs: "../../../js/createjs-2015.11.26.min.js",
+                easeljs: "../js/easeljs-0.8.2.min.js",
+                easeljs_0_7_1: "../js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
+                tweenjs: "../js/tweenjs-0.6.2.min.js",
+                movieclipjs: "../js/movieclip-0.7.1.min.js",
+                createjs: "../js/createjs-2015.11.26.min.js",
             }
         })
     </script>
-    <script src="../../../js/common.js"></script>
-    <script src="../../../js/common_new.js"></script>
+    <script src="../js/common.js"></script>
+    <script src="../js/common_new.js"></script>
     <script>
         $(function() {
             window.$ibox = $('.ibox').ibox();
         });
     </script>
-    <script>
-        $(document).ready(function() {
-            if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/cartoon/scene/111/1/');
-            }
-        });
-    </script>
-    <script type='text/javascript'>
-        var se_flg = 0,
-            bgm_flg = 0,
-            chrome_app_flg = 0,
-            chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
-    </script>
-    <script type='text/javascript' src='../../../js/app_sound.js'></script>
-    <link rel="stylesheet" type="text/css" href="../../../css/base.css" />
+    <script type='text/javascript' src='../js/app_sound.js'></script>
+    <link rel="stylesheet" type="text/css" href="../css/base.css" />
 </head>
 
 <body id="cartoon" class="scene">
     <div id="top" class="page_container jsOnBtn">
         <input id="delay" type="hidden" value="0">
-        <link rel="stylesheet" type="text/css" href='../../../css/rich/theater.css' media="all">
+        <link rel="stylesheet" type="text/css" href='../css/rich/theater.css' media="all">
         <div class="theater-content m-Btm12">
             <div class="theater-page_header m-Head_img m-Btm4"></div>
             <div class="theater-title_area">
@@ -113,35 +100,35 @@
                 <div class="theater-update_date">13/5/21갱신</div>
                 <div class="theater-latest_title">愛媛にきたデース!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cartoon/scene/234/1/%3Fkeyword%3D%25E6%2596%2587%25E9%25A6%2599%26like_only%3D%26sort_type%3D1%26l_frm%3DCartoon_scene_1%26rnd%3D421126374' class="theater-previous jsOnDesignBtn"></a>
+                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
-                <img src="../../../image_sp/cartoon/111/3b9151e22a7767af02be83c6f9f0aed4.jpg" width="292"><br>
+                <img src="../image_sp/cartoon/111/comic.jpg" width="292"><br>
             </div>
             <div class="theater-title_area">
                 <div class="theater-story_num">제111화</div>
                 <div class="theater-update_date">13/5/21갱신</div>
                 <div class="theater-latest_title">愛媛にきたデース!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cartoon/scene/234/1/%3Fkeyword%3D%25E6%2596%2587%25E9%25A6%2599%26like_only%3D%26sort_type%3D1%26l_frm%3DCartoon_scene_2%26rnd%3D361860092' class="theater-previous jsOnDesignBtn"></a>
+                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-hash-id="0dabb79ff64691111a0abae2ffed01ce" data-idol-id="1" data-name="우즈키" data-attribute-name="cute" data-rarity="1" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/0dabb79ff64691111a0abae2ffed01ce.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/0dabb79ff64691111a0abae2ffed01ce.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="6b068f0f0e900fe2dd9026fc45e69c73" data-idol-id="23" data-name="미치루" data-attribute-name="cute" data-rarity="1" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/6b068f0f0e900fe2dd9026fc45e69c73.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/6b068f0f0e900fe2dd9026fc45e69c73.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="8f88bb5ffa40b4935ef04257ba4ba0d1" data-idol-id="67" data-name="린" data-attribute-name="cool" data-rarity="1" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/8f88bb5ffa40b4935ef04257ba4ba0d1.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/8f88bb5ffa40b4935ef04257ba4ba0d1.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="cf0f5af872286b4401c644ad570b1401" data-idol-id="89" data-name="후미카" data-attribute-name="cool" data-rarity="1" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/cf0f5af872286b4401c644ad570b1401.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/cf0f5af872286b4401c644ad570b1401.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="dfa875a32faa00241a4fbe09310f9c7f" data-idol-id="129" data-name="하루" data-attribute-name="cool" data-rarity="3" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/dfa875a32faa00241a4fbe09310f9c7f.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/dfa875a32faa00241a4fbe09310f9c7f.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="3a15a87af190354ae89fca368b35b69e" data-idol-id="134" data-name="혼다" data-attribute-name="passion" data-rarity="1" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/3a15a87af190354ae89fca368b35b69e.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/3a15a87af190354ae89fca368b35b69e.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="190" data-name="캐시" data-attribute-name="passion" data-rarity="3" data-image="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/quest/b3484b86731fa47b0a59f2d1fb3af249.png">
-                    <img src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/xs/b3484b86731fa47b0a59f2d1fb3af249.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="0dabb79ff64691111a0abae2ffed01ce" data-idol-id="1" data-name="島村卯月" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
+                    <img src="../image_sp/card/xs/uzuki_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="6b068f0f0e900fe2dd9026fc45e69c73" data-idol-id="23" data-name="大原みちる" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/michiru_01.png">
+                    <img src="../image_sp/card/xs/michiru_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="8f88bb5ffa40b4935ef04257ba4ba0d1" data-idol-id="67" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
+                    <img src="../image_sp/card/xs/rin_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="cf0f5af872286b4401c644ad570b1401" data-idol-id="89" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
+                    <img src="../image_sp/card/xs/fumika_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="dfa875a32faa00241a4fbe09310f9c7f" data-idol-id="129" data-name="結城晴" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/haru_01.png">
+                    <img src="../image_sp/card/xs/haru_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="3a15a87af190354ae89fca368b35b69e" data-idol-id="134" data-name="本田未央" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
+                    <img src="../image_sp/card/xs/honda_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="190" data-name="ｷｬｼｰ･ｸﾞﾗﾊﾑ" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/cathy_01.png">
+                    <img src="../image_sp/card/xs/cathy_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
                             <div class="theater-idol_image">
@@ -156,7 +143,7 @@
             </div>
             <div class="theater-page_footer"></div>
         </div>
-        <a href='../../index.html'>
+        <a href='index.html'>
             <div class="backLink">극장TOP</div>
         </a>
         <script>
@@ -170,7 +157,7 @@
                 function likeStart(cartoon_id) {
                     $.ajax({
                             type: 'POST',
-                            url: 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cartoon/like_check%3Fl_frm%3DCartoon_scene_1%26rnd%3D291025172',
+                            url: 'http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/cartoon/like_check',
                             dataType: 'json',
                             data: {
                                 "cartoon_id": cartoon_id,
@@ -222,7 +209,7 @@
                 })
             })
         </script>
-        <a href='../../../mypage.html'>
+        <a href='../../mypage.html'>
             <div class="backLink">마이스튜디오</div>
         </a>
         <footer>
@@ -231,42 +218,7 @@
             </a>
         </footer>
     </div>
-    <script>
-        window._tarminal = {
-            'native_app_flg': false,
-            'android_app_flg': false,
-            'ios_app_flg': false,
-            'shell_app_flg': false
-        };
-    </script>
-    <script>
-        window._tarminal = {
-            'native_app_flg': false,
-            'android_app_flg': false,
-            'ios_app_flg': false,
-            'shell_app_flg': false
-        };
-    </script>
     <div id="mbga-pf-footer">
-        <script type="text/javascript" charset="UTF-8">
-            (function() {
-                document.addEventListener('DOMContentLoaded', function() {
-                    var list = document.getElementsByClassName('mbga-pf-footer-li');
-                    var i = 0,
-                        l = list.length;
-                    for (; i < l; i++) {
-                        var elem = list[i];
-                        elem.addEventListener('touchstart', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/$/, ' mbga-pf-tapped');
-                        });
-                        elem.addEventListener('touchend', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/ mbga-pf-tapped/, '');
-                        });
-                        elem.addEventListener('touchmove', function(e) {});
-                    }
-                });
-            })();
-        </script>
     </div>
 </body>
 
