--- a/cartoon/index.html
+++ b/cartoon/index.html
@@ -98,59 +98,59 @@
             <div id="paging_target" class="theater-text_notice m-Cnt m-Btm4"></div>
             <div class="theater-common_area m-Btm12">
                 <div class="theater-thumbnail_list m-Cnt">
-                    <a href='scene/111/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    <a href='111.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제111화</div></div>
                         <img src="../image_sp/cartoon/111/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">13/5/21</div></div>
-                    </a><a href='scene/133/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='133.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제133화</div></div>
                         <img src="../image_sp/cartoon/133/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">13/7/17</div></div>
-                    </a><a href='scene/178/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='178.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제178화</div></div>
                         <img src="../image_sp/cartoon/178/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">13/11/3</div></div>
-                    </a><a href='scene/234/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='234.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제234화</div></div>
                         <img src="../image_sp/cartoon/234/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/1/30</div></div>
-                    </a><a href='scene/242/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='242.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제242화</div></div>
                         <img src="../image_sp/cartoon/242/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/2/13</div></div>
-                    </a><a href='scene/244/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='244.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제244화</div></div>
                         <img src="../image_sp/cartoon/244/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/2/15</div></div>
-                    </a><a href='scene/287/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/287.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제287화</div></div>
                         <img src="../image_sp/cartoon/287/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/4/23</div></div>
-                    </a><a href='scene/288/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/288.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제288화</div></div>
                         <img src="../image_sp/cartoon/288/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/4/24</div></div>
-                    </a><a href='scene/347/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/347.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제347화</div></div>
                         <img src="../image_sp/cartoon/347/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/7/22</div></div>
-                    </a><a href='scene/353/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/353.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제353화</div></div>
                         <img src="../image_sp/cartoon/353/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/7/31</div></div>
-                    </a><a href='scene/354/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/354.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제354화</div></div>
                         <img src="../image_sp/cartoon/354/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/7/31</div></div>
-                    </a><a href='scene/356/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/356.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제356화</div></div>
                         <img src="../image_sp/cartoon/356/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/8/4</div></div>
-                    </a><a href='scene/358/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/358.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제358화</div></div>
                         <img src="../image_sp/cartoon/358/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/8/6</div></div>
-                    </a><a href='scene/433/1.html' class="theater-thumbnail jsOnDesignBtn">
+                    </a><a href='scene/433.html' class="theater-thumbnail jsOnDesignBtn">
                         <div class="theater-thumbnail_top"><div class="theater-story_num ">제433화</div></div>
                         <img src="../image_sp/cartoon/433/small_cover.jpg" width="88">
                         <div class="theater-thumbnail_bottom"><div class="theater-update_date">14/12/20</div></div>
