--- a/cartoon/133.html
+++ b/cartoon/133.html
@@ -68,39 +68,41 @@
         <div class="theater-content m-Btm12">
             <div class="theater-page_header m-Head_img m-Btm4"></div>
             <div class="theater-title_area">
-                <div class="theater-story_num">第111話</div>
-                <div class="theater-update_date">13/5/21更新</div>
-                <div class="theater-latest_title">愛媛にきたデース!</div>
+                <a href='111.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第133話</div>
+                <div class="theater-update_date">13/7/17更新</div>
+                <div class="theater-latest_title">沖縄に来ました!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
-                <img src="../image_sp/cartoon/111/comic.jpg" width="292"><br>
+                <img src="../image_sp/cartoon/133/comic.jpg" width="292"><br>
             </div>
             <div class="theater-title_area">
-                <div class="theater-story_num">第111話</div>
-                <div class="theater-update_date">13/5/21更新</div>
-                <div class="theater-latest_title">愛媛にきたデース!</div>
+                <a href='111.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第133話</div>
+                <div class="theater-update_date">13/7/17更新</div>
+                <div class="theater-latest_title">沖縄に来ました!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='133.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
                     <div class="theater-appearance_idol" data-hash-id="0dabb79ff64691111a0abae2ffed01ce" data-idol-id="1" data-name="島村卯月" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
                     <img src="../image_sp/card/xs/uzuki_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="6b068f0f0e900fe2dd9026fc45e69c73" data-idol-id="23" data-name="大原みちる" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/michiru_01.png">
-                    <img src="../image_sp/card/xs/michiru_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="8f88bb5ffa40b4935ef04257ba4ba0d1" data-idol-id="67" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
+                    <div class="theater-appearance_idol" data-hash-id="6b068f0f0e900fe2dd9026fc45e69c73" data-idol-id="17" data-name="長富蓮実" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/hasumi_01.png">
+                    <img src="../image_sp/card/xs/hasumi_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="8f88bb5ffa40b4935ef04257ba4ba0d1" data-idol-id="24" data-name="遊佐こずえ" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/kozue_01.png">
+                    <img src="../image_sp/card/xs/kozue_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="cf0f5af872286b4401c644ad570b1401" data-idol-id="67" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
                     <img src="../image_sp/card/xs/rin_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="cf0f5af872286b4401c644ad570b1401" data-idol-id="89" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
-                    <img src="../image_sp/card/xs/fumika_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="dfa875a32faa00241a4fbe09310f9c7f" data-idol-id="129" data-name="結城晴" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/haru_01.png">
-                    <img src="../image_sp/card/xs/haru_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="dfa875a32faa00241a4fbe09310f9c7f" data-idol-id="90" data-name="八神ﾏｷﾉ" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/makino_01.png">
+                    <img src="../image_sp/card/xs/makino_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-appearance_idol" data-hash-id="3a15a87af190354ae89fca368b35b69e" data-idol-id="134" data-name="本田未央" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
                     <img src="../image_sp/card/xs/honda_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="190" data-name="ｷｬｼｰ･ｸﾞﾗﾊﾑ" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/cathy_01.png">
-                    <img src="../image_sp/card/xs/cathy_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="196" data-name="冴島清美" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/kiyomi_01.png">
+                    <img src="../image_sp/card/xs/kiyomi_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
                             <div class="theater-idol_image">
