--- a/cartoon/111.html
+++ b/cartoon/111.html
@@ -87,19 +87,19 @@
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-hash-id="0dabb79ff64691111a0abae2ffed01ce" data-idol-id="1" data-name="島村卯月" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
+                    <div class="theater-appearance_idol" data-name="島村卯月" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
                     <img src="../image_sp/card/xs/uzuki_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="6b068f0f0e900fe2dd9026fc45e69c73" data-idol-id="23" data-name="大原みちる" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/michiru_01.png">
+                    <div class="theater-appearance_idol" data-name="大原みちる" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/michiru_01.png">
                     <img src="../image_sp/card/xs/michiru_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="8f88bb5ffa40b4935ef04257ba4ba0d1" data-idol-id="67" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
+                    <div class="theater-appearance_idol" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
                     <img src="../image_sp/card/xs/rin_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="cf0f5af872286b4401c644ad570b1401" data-idol-id="89" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
+                    <div class="theater-appearance_idol" data-name="鷺沢文香" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/fumika_01.png">
                     <img src="../image_sp/card/xs/fumika_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="dfa875a32faa00241a4fbe09310f9c7f" data-idol-id="129" data-name="結城晴" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/haru_01.png">
+                    <div class="theater-appearance_idol" data-name="結城晴" data-attribute-name="cool" data-rarity="3" data-image="../image_sp/card/quest/haru_01.png">
                     <img src="../image_sp/card/xs/haru_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="3a15a87af190354ae89fca368b35b69e" data-idol-id="134" data-name="本田未央" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
+                    <div class="theater-appearance_idol" data-name="本田未央" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
                     <img src="../image_sp/card/xs/honda_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="190" data-name="ｷｬｼｰ･ｸﾞﾗﾊﾑ" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/cathy_01.png">
+                    <div class="theater-appearance_idol" data-name="ｷｬｼｰ･ｸﾞﾗﾊﾑ" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/cathy_01.png">
                     <img src="../image_sp/card/xs/cathy_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
