--- a/cartoon/178.html
+++ b/cartoon/178.html
@@ -73,7 +73,7 @@
                 <div class="theater-update_date">13/11/3更新</div>
                 <div class="theater-latest_title">サイキックじぶん紅葉!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='234.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
                 <img src="../image_sp/cartoon/178/comic.jpg" width="292"><br>
@@ -84,16 +84,16 @@
                 <div class="theater-update_date">13/11/3更新</div>
                 <div class="theater-latest_title">サイキックじぶん紅葉!</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='234.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-hash-id="0dabb79ff64691111a0abae2ffed01ce" data-idol-id="31" data-name="宮本ﾌﾚﾃﾞﾘｶ" data-attribute-name="cute" data-rarity="3" data-image="../image_sp/card/quest/frederica_01.png">
+                    <div class="theater-appearance_idol" data-name="宮本ﾌﾚﾃﾞﾘｶ" data-attribute-name="cute" data-rarity="3" data-image="../image_sp/card/quest/frederica_01.png">
                     <img src="../image_sp/card/xs/frederica_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="3a15a87af190354ae89fca368b35b69e" data-idol-id="158" data-name="堀裕子" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/yuko_01.png">
+                    <div class="theater-appearance_idol" data-name="堀裕子" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/yuko_01.png">
                     <img src="../image_sp/card/xs/yuko_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-hash-id="b3484b86731fa47b0a59f2d1fb3af249" data-idol-id="196" data-name="冴島清美" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/kiyomi_01.png">
+                    <div class="theater-appearance_idol" data-name="冴島清美" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/kiyomi_01.png">
                     <img src="../image_sp/card/xs/kiyomi_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
