--- a/cartoon/358.html
+++ b/cartoon/358.html
@@ -68,41 +68,35 @@
         <div class="theater-content m-Btm12">
             <div class="theater-page_header m-Head_img m-Btm4"></div>
             <div class="theater-title_area">
-                <a href='111.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第133話</div>
-                <div class="theater-update_date">13/7/17更新</div>
-                <div class="theater-latest_title">沖縄に来ました!</div>
+                <a href='356.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第358話</div>
+                <div class="theater-update_date">14/8/6更新</div>
+                <div class="theater-latest_title">だから背中を押せるんだ</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='433.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-cartoon_area m-Top8 m-Btm8">
-                <img src="../image_sp/cartoon/133/comic.jpg" width="292"><br>
+                <img src="../image_sp/cartoon/358/comic.jpg" width="292"><br>
             </div>
             <div class="theater-title_area">
-                <a href='111.html' class="theater-next jsOnDesignBtn"></a>
-                <div class="theater-story_num">第133話</div>
-                <div class="theater-update_date">13/7/17更新</div>
-                <div class="theater-latest_title">沖縄に来ました!</div>
+                <a href='356.html' class="theater-next jsOnDesignBtn"></a>
+                <div class="theater-story_num">第358話</div>
+                <div class="theater-update_date">14/8/6更新</div>
+                <div class="theater-latest_title">だから背中を押せるんだ</div>
                 <a class="theater-btn_like jsOnDesignBtn " data-cartoon-id="111"></a>
-                <a href='178.html' class="theater-previous jsOnDesignBtn"></a>
+                <a href='433.html' class="theater-previous jsOnDesignBtn"></a>
             </div>
             <div class="theater-common_area m-Top12 m-Btm8">
                 <div class="theater-common_area_title theater-text_appearance_idol"></div>
                 <div class="theater-appearance_idol_list m-Top8 m-Cnt t-Lft">
-                    <div class="theater-appearance_idol" data-name="島村卯月" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/uzuki_01.png">
-                    <img src="../image_sp/card/xs/uzuki_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="長富蓮実" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/hasumi_01.png">
-                    <img src="../image_sp/card/xs/hasumi_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="遊佐こずえ" data-attribute-name="cute" data-rarity="1" data-image="../image_sp/card/quest/kozue_01.png">
-                    <img src="../image_sp/card/xs/kozue_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="渋谷凛" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/rin_01.png">
-                    <img src="../image_sp/card/xs/rin_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="八神ﾏｷﾉ" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/makino_01.png">
-                    <img src="../image_sp/card/xs/makino_01.jpg" class="theater-appearance_idol_img"></div>
-                    <div class="theater-appearance_idol" data-name="本田未央" data-attribute-name="passion" data-rarity="1" data-image="../image_sp/card/quest/honda_01.png">
-                    <img src="../image_sp/card/xs/honda_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="涼宮星花" data-attribute-name="cute" data-rarity="3" data-image="../image_sp/card/quest/seika_01.png">
+                        <img src="../image_sp/card/xs/seika_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="多田李衣菜" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/riina_01.png">
+                        <img src="../image_sp/card/xs/riina_01.jpg" class="theater-appearance_idol_img"></div>
+                    <div class="theater-appearance_idol" data-name="ﾗｲﾗ" data-attribute-name="cool" data-rarity="1" data-image="../image_sp/card/quest/layla_01.png">
+                        <img src="../image_sp/card/xs/layla_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-appearance_idol" data-name="冴島清美" data-attribute-name="passion" data-rarity="3" data-image="../image_sp/card/quest/kiyomi_01.png">
-                    <img src="../image_sp/card/xs/kiyomi_01.jpg" class="theater-appearance_idol_img"></div>
+                        <img src="../image_sp/card/xs/kiyomi_01.jpg" class="theater-appearance_idol_img"></div>
                     <div class="theater-idol_bg m-Top8 m-Btm4">
                         <div class="theater-idol_wrapper">
                             <div class="theater-idol_image">
