--- a/cartoon/133.html
+++ b/cartoon/133.html
@@ -115,7 +115,7 @@
             </div>
             <div class="theater-page_footer"></div>
         </div>
-        <a href='index.html'>
+        <a href='index_j.html'>
             <div class="backLink">劇場TOP</div>
         </a>
         <script>
