--- a/mypage.html
+++ b/mypage.html
@@ -407,12 +407,18 @@
             </div>
             <div class="btn_menu_type_2 m-Btm4" style="width:288px;padding:8px 0 0 8px;margin:-8px auto 8px">
                 <ul class="jsOnBanner">
-                    <li><a href='cartoon/index.html' class="banner_type_gekijo banner_cartoon_bg">
-                            <div class="image_chara" style='background-image:url(image_sp/cartoon/1426/d38a5d61a69700c86f11f317e8205b49.png)'></div>
-                            <div class="text_value">제1426화 갱신</div>
+                    <li><a href='cartoon/index_k.html' class="banner_type_gekijo banner_cartoon_bg">
+                            <div class="image_chara" style='background-image:url(image_sp/cartoon/1552/f17926b05b6a84eb11e5fd9c9fa7516b.png)'></div>
+                            <div class="text_value">제1552화 갱신</div>
                             <div class="banner_cartoon_cover"></div>
                         </a>
                     </li>
+                    <li><a href='cartoon/index_j.html' class="banner_type_gekijo banner_cartoon_bg">
+                        <div class="image_chara" style='background-image:url(image_sp/cartoon/1552/f17926b05b6a84eb11e5fd9c9fa7516b.png)'></div>
+                        <div class="text_value">第1552話 更新</div>
+                        <div class="banner_cartoon_cover"></div>
+                    </a>
+                </li>
                 </ul>
             </div>
             <div class="area_banner_triplicate_wrap area-frame_common">
