--- a/cartoon/347.html
+++ b/cartoon/347.html
@@ -109,7 +109,7 @@
             </div>
             <div class="theater-page_footer"></div>
         </div>
-        <a href='index.html'>
+        <a href='index_j.html'>
             <div class="backLink">劇場TOP</div>
         </a>
         <script>
