--- a/memory/anniversary.html
+++ b/memory/anniversary.html
@@ -51,26 +51,12 @@
             window.$ibox = $('.ibox').ibox();
         });
     </script>
-    <script>
-        $(document).ready(function() {
-            if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/mypage');
-            }
-        });
-    </script>
-    <script type='text/javascript'>
-        var se_flg = 0,
-            bgm_flg = 0,
-            chrome_app_flg = 0,
-            chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
-    </script>
     <script type='text/javascript' src='../js/app_sound.js'></script>
     <link rel="stylesheet" type="../text/css" href="css/base.css" />
 </head>
 
 <body id="mypage" class="index">
     <div id="top" class="page_container jsOnBtn">
-        <script src="js/jquery.common-popup.js"></script>
         <h2 class="title_img_blue" style="margin:0;">
             <div>2020</div>
         </h2>
@@ -91,50 +77,26 @@
         <a href="../event_produce/select_idol_for_memorial_9.html" class="jsOnDesignBtn"><img src="../image_sp/event/1731/extramemory/extra_banner.png" width="280" height="44"></a>
         </div>
         <div class="jsOnBanner">
-            <a href="../vote/publish_all/200009.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/70cc9288076c970a3b2cb784452652ce.png)">
-                <div></div>
-            </a>
+            <a href="../vote/publish_all/200009.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/70cc9288076c970a3b2cb784452652ce.png)"></a>
         </div>
         <br>
         <h2 class="title_img_blue" style="margin:0;">
             <div>2021</div>
         </h2>
         <br>
-        <div class="t-Cnt m-Btm8">
-            <div class="area_banner_type_text jsOnBanner">
-                <div class="t-Cnt"><a href='../campaigns/valentine_present/show_flash_present_chocolate/2021/select_base_idol.html' class="banner_type_text" style='background-image:url(../image_sp/banner/attraction/a6d39fece121dfc48f1e9ead756d2794.png)'></a></div>
-            </div>
-        </div>
-        <div class="t-Cnt m-Btm8">
-            <div class="area_banner_type_text jsOnBanner">
-                <div class="t-Cnt"><a href='../campaigns/whiteday_present/index_2021.html' class="banner_type_text" style='background-image:url(../image_sp/banner/attraction/f7e60b6d9e30e0d419a2e4733089244e.png)'></a></div>
-            </div>
+        <div class="jsOnBanner">
+            <a href="../campaigns/valentine_present/show_flash_present_chocolate/2021/select_base_idol.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/a6d39fece121dfc48f1e9ead756d2794.png)"></a>
         </div>
         <div class="jsOnBanner">
-            <a href="../vote/publish_all/200010.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/aa46ce5a44349928bd971717125de32d.png)">
-                <div></div>
-            </a>
+            <a href="../campaigns/whiteday_present/index_2021.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/f7e60b6d9e30e0d419a2e4733089244e.png)"></a>
+        </div>
+        <div class="jsOnBanner">
+            <a href="../vote/publish_all/200010.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/aa46ce5a44349928bd971717125de32d.png)"></a>
+        </div>
+        <div class="jsOnBanner">
+            <a href="../memory/smart_phone_flash/convert/onetime_flash/200353.html" class="banner_type_text offBanner" style="background-image:url(../image_sp/banner/attraction/0f4c90d4ace57542db263a376785b656.png)"></a>
         </div>
         <br>
-        <script src="../js/min/mypage.min.js"></script>
-        <div class="lBox">
-            <section id="newInfo" class="newInfoArea">
-                <div class="bg_popup_top area_popup_top">
-                    <a href="#" class="btn_popup_close ibox_close btn_close_01">
-                        <div></div>
-                    </a>
-                </div>
-                <div class="newInfoBody">
-                </div>
-                <div class="bg_popup_bottom area_popup_bottom">
-                    <a href="#" class="btn_popup_close_02 ibox_close btn_close_02">
-                        <div></div>
-                    </a>
-                </div>
-                <div></div>
-            </section>
-        </div>
-        <script src="../js/islider.js"></script>
         <footer>
             <a href='../mypage.html'>
                 <div class="backLink">마이스튜디오</div>
@@ -144,27 +106,6 @@
             <a href="#top" id="toPageTop" class="mypage_under">
             </a>
         </footer>
-    </div>
-    <div id="mbga-pf-footer">
-        <script type="text/javascript" charset="UTF-8">
-            (function() {
-                document.addEventListener('DOMContentLoaded', function() {
-                    var list = document.getElementsByClassName('mbga-pf-footer-li');
-                    var i = 0,
-                        l = list.length;
-                    for (; i < l; i++) {
-                        var elem = list[i];
-                        elem.addEventListener('touchstart', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/$/, ' mbga-pf-tapped');
-                        });
-                        elem.addEventListener('touchend', function(e) {
-                            e.currentTarget.className = e.currentTarget.className.replace(/ mbga-pf-tapped/, '');
-                        });
-                        elem.addEventListener('touchmove', function(e) {});
-                    }
-                });
-            })();
-        </script>
     </div>
 </body>
 
