--- a/memory/smart_phone_flash/convert/onetime_flash/200353.html
+++ b/memory/smart_phone_flash/convert/onetime_flash/200353.html
@@ -64,8 +64,8 @@
         window.dir_name = "../../../../image_sp/cjs/campaign/anniversary/10th/memorial_month/";
         window.replace_images = []
         window.im_cjs = {
-            "url": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http%3A//mobamas.net/idolmaster/mypage/index",
-            "_url": "http:\/\/sp.pf.mbga.jp\/12008305\/?guid=ON&amp;url=http%3A//mobamas.net/idolmaster/mypage/index"
+            "url": "http://127.0.0.1:5500/memory/anniversary.html",
+            "_url": "http://127.0.0.1:5500/memory/anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
