--- a/memory/smart_phone_flash/convert/onetime_flash/200353.html
+++ b/memory/smart_phone_flash/convert/onetime_flash/200353.html
@@ -65,7 +65,7 @@
         window.replace_images = []
         window.im_cjs = {
             "url": "http://127.0.0.1:5500/memory/anniversary.html",
-            "_url": "http://127.0.0.1:5500/memory/anniversary.html"
+            "_url": "/anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
