--- a/memory/smart_phone_flash/convert/onetime_flash/200353.html
+++ b/memory/smart_phone_flash/convert/onetime_flash/200353.html
@@ -64,8 +64,8 @@
         window.dir_name = "../../../../image_sp/cjs/campaign/anniversary/10th/memorial_month/";
         window.replace_images = []
         window.im_cjs = {
-            "url": "http://127.0.0.1:5500/memory/anniversary.html",
-            "_url": "/anniversary.html"
+            "url": "../../../anniversary.html",
+            "_url": "../../../anniversary.html"
         };
         window.child_obj = [];
         window.im_cjs = window.im_cjs || {};
