--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -266,6 +266,7 @@
         <div class="area_tab_3">
             <div id="story-content" class="jsOnDesignBtn-wrap">
             </div>
+            <p>이 페이지에는 네이버에서 제공한 나눔 고딕 글꼴이 적용되어 있습니다.<br><a href="https://help.naver.com/support/contents/contents.help?serviceNo=1074&categoryNo=3497">라이센스</a></p>
         </div>
         <div class="area_tab_4">
             <div id="parameter-content" class="jsOnBtn-wrap">
