--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -472,7 +472,7 @@ kg
 <% val2 = val.icon[key2] %>
 <% if (+val.open_flag[key2]) { %>
 <li style="<% if (total == 2) { %>width:50%;<% } else if(total == 3) { %> width:33%; <% } else { %>margin:0 5px;<% } %>">
-<form method="get" action="<%- val.flash_path[key2].replace('__hash_card_id__', idol_detail.data.hash_card_id) %>" style="height:90px;">
+<a href="<%- val.flash_path[key2].replace('__hash_card_id__', idol_detail.data.hash_card_id) %>" style="height:90px;">
 <input type="image" src="<%- val2 %>" height="75" class="jsOnDesignBtn"><br>
 <% if (+val.voice_enable[key2]) { %>
 <input class="movie_name jsOnDesignBtn" type="image" src="<%- val.movie_name_voice[key2] %>" width="77" style="width:77px;position:relative;top:-15px;"><br>
@@ -480,7 +480,7 @@ kg
 <input type="image" src="<%- val.movie_name[key2] %>" width="77" style="width:77px;position:relative;top:-15px;"><br>
 <% } %>
 <% if (val.story_id > 0 && +val.voice_enable[key2]) { %><input type="hidden" name="voice" value="0"><% } %>
-</form>
+</a>
 <% if (+val.voice_enable[key2]) { %>
 <% if (!val.voice_attention || !+val.voice_attention[key2]) { %>
 <% } %>
