--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -243,18 +243,12 @@
             <div class="displayBox" style="-webkit-box-pack:center;width:300px;">
                 <div style="width:50%">
                     <a class="btn_3rd_anniversary js_submit_check_idol_comment_3rd m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="get" action='../../campaigns/3rd_anniversary/idol_comment/fumika.html' class="form_check_idol_comment_3rd" style="display:none;">
-                        <input type="hidden" name="character_id" value="89">
-                        <input type="hidden" name="select_card_hash" value="">
+                    <form method="get" action='../../campaigns/3rd_anniversary/idol_comment/fumika.html' class="form_check_idol_comment_3rd">
                     </form>
                 </div>
                 <div style="width:50%">
                     <a class="btn_5th_anniversary js_submit_check_idol_comment_5th m-Top10 t-Cnt jsOnDesignBtn"></a>
-                    <form method="get" action='../../campaigns/5th_anniversary/idol_comment/fumika.html' class="form_check_idol_comment_5th" style="display:none;">
-                        <input type="hidden" name="card_hash" value="">
-                        <input type="hidden" name="redirect_url" value="">
-                        <input type="hidden" name="campaign_id" value="114">
-                        <input type="hidden" name="chapter_id" value="1">
+                    <form method="get" action='../../campaigns/5th_anniversary/idol_comment/fumika.html' class="form_check_idol_comment_5th">
                     </form>
                 </div>
             </div>
