--- a/idol_story/movie_play/436/1_k.html
+++ b/idol_story/movie_play/436/1_k.html
@@ -818,14 +818,14 @@
             "10189": {
                 "id": 1,
                 "hash_id": "",
-                "name": "\u6587\u9999",
+                "name": "후미카",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
                 "face": ["1", "1", "7", "2", "3", "1", "9", "2"]
             }
         };
-        window.im_cjs.title_name = '資料室' || 'no_title';
+        window.im_cjs.title_name = '자료실' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
         window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/fumika_k.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
