--- a/idol_story/movie_play/447/2_k.html
+++ b/idol_story/movie_play/447/2_k.html
@@ -2437,13 +2437,13 @@
                 "2200601": {
                     "id": 1,
                     "hash_id": "b7999fc204ef28323b6b656f66d46c42",
-                    "name": "\u862d\u5b50",
+                    "name": "란코",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "0"
                 }
             },
-            "title": "\u4e8b\u52d9\u6240",
+            "title": "事務所",
             "story_type": "3",
             "all_skip": "0",
             "logo_bg": ""
@@ -2498,14 +2498,14 @@
             "2200601": {
                 "id": 1,
                 "hash_id": "b7999fc204ef28323b6b656f66d46c42",
-                "name": "蘭子",
+                "name": "란코",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "0",
                 "face": ["1", "1", "10", "1", "9", "7", "2", "5"]
             }
         };
-        window.im_cjs.title_name = '事務所' || 'no_title';
+        window.im_cjs.title_name = '사무소' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
         window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/ranko_k.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
