--- a/idol_story/movie_play/448/1_k.html
+++ b/idol_story/movie_play/448/1_k.html
@@ -12,13 +12,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href='../../../css/game/pex.css' media="all">
     <script src='../../../js/jquery-1.9.1.min.js'></script>
-    <script>
-        $(document).ready(function() {
-            if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/idol_story/generator_cjs/448/1/idol_story--index---keyword----/1');
-            }
-        });
-    </script>
     <meta name="authoring-tool" content="Adobe_Animate_CC">
     <style>
         body {
@@ -2026,13 +2019,13 @@
                 "10189": {
                     "id": 1,
                     "hash_id": "",
-                    "name": "\u6587\u9999",
+                    "name": "文香",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
                 }
             },
-            "title": "\u4e8b\u52d9\u6240",
+            "title": "事務所",
             "story_type": "3",
             "all_skip": "0",
             "logo_bg": ""
@@ -2084,14 +2077,14 @@
             "10189": {
                 "id": 1,
                 "hash_id": "",
-                "name": "\u6587\u9999",
+                "name": "후미카",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
                 "face": ["1", "1", "2", "9", "6", "2", "5", "5"]
             }
         };
-        window.im_cjs.title_name = '事務所' || 'no_title';
+        window.im_cjs.title_name = '사무소' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
         window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/fumika_k.html'; // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
